@@ -14,12 +14,12 @@ public class AdvanceBlockchainMessage {
     protected static final int BROTHERS_LIMIT_PER_BLOCK_HEADER = 10;
     private final List<ParsedHeader> parsedHeaders;
 
-    public AdvanceBlockchainMessage(List<Block> blocks) {
-        this.parsedHeaders = parseHeadersAndBrothers(blocks);
+    public AdvanceBlockchainMessage(List<Block> confirmedBlocks) {
+        this.parsedHeaders = parseHeadersAndBrothers(confirmedBlocks);
     }
 
     public List<String> getParsedBlockHeaders() {
-        return this.parsedHeaders.stream().map(ParsedHeader::getBlockHeader).collect(Collectors.toList());
+        return this.parsedHeaders.stream().map(ParsedHeader::getBlockHeader).toList();
     }
 
     public String[] getParsedBrothers(String blockHeader) throws HSMBlockchainBookkeepingRelatedException {
@@ -27,35 +27,36 @@ public class AdvanceBlockchainMessage {
             .filter(header -> header.getBlockHeader().equals(blockHeader))
             .findFirst()
             .map(ParsedHeader::getBrothers)
-            .orElseThrow(() -> new HSMBlockchainBookkeepingRelatedException("Error while trying to get brothers for block header. Could not find header: " + blockHeader));
+            .orElseThrow(
+                () -> new HSMBlockchainBookkeepingRelatedException("Error while trying to get brothers for block header. Could not find header " + blockHeader)
+            );
     }
 
-    private List<ParsedHeader> parseHeadersAndBrothers(List<Block> blocks) {
-        Map<Keccak256, List<BlockHeader>> brothersByParentHash = groupBrothersByParentHash(blocks);
+    private List<ParsedHeader> parseHeadersAndBrothers(List<Block> confirmedBlocks) {
+        Map<Keccak256, List<BlockHeader>> brothersByParentHash = groupBrothersByParentHash(confirmedBlocks);
 
-        return blocks.stream()
+        return confirmedBlocks.stream()
             .sorted(Comparator.comparingLong(Block::getNumber).reversed()) // sort blocks from latest to oldest
             .map(block -> new ParsedHeader(
                 block.getHeader(),
-                filterBrothers(brothersByParentHash.getOrDefault(block.getParentHash(), Collections.emptyList()))
-            )).collect(Collectors.toList());
+                capAmountOfBrothers(brothersByParentHash.getOrDefault(block.getParentHash(), Collections.emptyList()))
+            )).toList();
     }
 
-    private Map<Keccak256, List<BlockHeader>> groupBrothersByParentHash(List<Block> blocks) {
-        return blocks.stream()
+    private Map<Keccak256, List<BlockHeader>> groupBrothersByParentHash(List<Block> confirmedBlocks) {
+        return confirmedBlocks.stream()
             .skip(1) // Skip the oldest block (index 0) because its uncles doesn't belong to this set of blocks
             .flatMap(block -> block.getUncleList().stream())
             .collect(Collectors.groupingBy(BlockHeader::getParentHash));
     }
 
-    private List<BlockHeader> filterBrothers(List<BlockHeader> brothers) {
+    private List<BlockHeader> capAmountOfBrothers(List<BlockHeader> brothers) {
         if (brothers.size() <= BROTHERS_LIMIT_PER_BLOCK_HEADER) {
             return brothers;
         }
         return brothers.stream()
-            .sorted((brother1, brother2) ->
-                brother2.getDifficulty().asBigInteger().compareTo(brother1.getDifficulty().asBigInteger()))
+            .sorted((brother1, brother2) -> brother2.getDifficulty().compareTo(brother1.getDifficulty()))
             .limit(BROTHERS_LIMIT_PER_BLOCK_HEADER)
-            .collect(Collectors.toList());
+            .toList();
     }
 }
